# task-manager

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
assets/icons/: icon.icns
src/: charts.rs  lib.rs  main.rs  process_table.rs  theme.rs  ui.rs  utilities.rs
src/iced_table/: Cargo.toml
src/iced_table/src/: divider.rs  lib.rs  style.rs
src/taskmanager/: ui.rs
tests/: ui_tests.rs
