[package]
name = "task-manager"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = { git = "https://github.com/emilk/egui", version = "0.33.3" }
sysinfo = "0.38.2"
egui_extras = { git = "https://github.com/emilk/egui", features = [
    "default",
    "image",
] }
egui_plot = { git = "https://github.com/emilk/egui_plot", version = "0.34.1" }

[patch.crates-io]
egui = { git = "https://github.com/emilk/egui" }
epaint = { git = "https://github.com/emilk/egui" }
emath = { git = "https://github.com/emilk/egui" }

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
