[package]
name = "task-manager"
version = "0.1.0"
edition = "2024"

[dependencies]
sysinfo = "0.38.2"
iced = { version = "0.14.0", features = ["image", "canvas", "smol", "tokio"] }
image = "0.25.9"
plotters-iced2 = "0.14"
plotters = "0.3"
iced_table = { path = "src/iced_table" }

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
