[package]
name = "task-manager"
version = "0.1.2"
edition = "2024"

[package.metadata.bundle]
name = "Task Manager Mac"
identifier = "com.khoa.taskmanager"
version = "0.1.2"
resources = ["assets", "config.toml"]
icon = [
    "assets/icons/32x32.png",
    "assets/icons/128x128.png",
    "assets/icons/icon.icns",
]
copyright = "Copyright (c) 2026. All rights reserved."
category = "Developer Tool"
short_description = "Task manager"
long_description = """
Task manager that is built with rust
"""

[dependencies]
sysinfo = "0.38.2"
iced = { version = "0.14.0", features = ["image", "canvas", "smol", "tokio"] }
image = "0.25.9"
plotters-iced2 = "0.14"
plotters = "0.3"
iced_table = { path = "src/iced_table" }

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
